// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on <GiftExpertApp /> should load a list of categories 1`] = `
<div>
  <h2>
    Gift Expert App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</div>
`;

exports[`Tests on <GiftExpertApp /> should render the app 1`] = `
<div>
  <h2>
    Gift Expert App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</div>
`;
